# python-essentials

./: .gitignore  .replit  day2-formatacao.py  day2-interpolacao.py  day2_dict.ipynb  day2_dict.py  day2_sets.ipynb  day2_sets.py  dict_cadastro.py  escola_v1_com_lista.py  escola_v2_com_set.py  escola_v3_com_dict.py  hello.py  hello_dict.py  micro_cadastro_de_produto.py  pyproject.toml  tabuada.py
